@@ -11,6 +11,7 @@ Bug fixes:
 - #7036 Fix tray icon not changing theme on Big Sur
 - #7046 Fix MacOS 10.13 build
 - #7049 Scroll doesn't work in case of macOS is server
+- #7055 Add secure input notification on Linux
 - #7052 Add secure input notification on Windows
 - #7047 Fix prevent sleep option on Mac and Windows
 
